--- a/Chef/chef-server/cookbooks/learn_chef_apache2/templates/index.html.erb
+++ b/Chef/chef-server/cookbooks/learn_chef_apache2/templates/index.html.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>hello from <%= node['fqdn'] %></h1>
+    <h1>Fuck Off from <%= node['fqdn'] %></h1>
     <%# The above brackets are placeholders %>
   </body>
 </html>
